# UCONN

ComputerScience/CSE 1729/Lab/: lab-2.bak  lab-2.rkt  lab-2save.rkt  lab-4.rkt  lab-5.bak  lab-5.rkt  lab0.rkt  lab1.bak  lab1.rkt  lab10.bak  lab10.rkt  lab6.bak  lab6.rkt  lab7.bak  lab7.rkt  lab8.bak  lab8.rkt  lab9.rkt  test.rkt
ComputerScience/CSE 1729/Prelims/: prelim2.rkt  prelim3practice.bak  prelim3practice.rkt  test.rkt  thing1.rkt  thing2.rkt
ComputerScience/CSE 1729/Problem Sets/: ps2-sol.bak  ps2-sol.rkt  ps3-sol.rkt  ps4-sol.bak  ps4-sol.rkt  ps5.bak  ps5.rkt  ps6.bak  ps6.rkt  ps7.bak  ps7.rkt  pset1-v2.rkt  pset1.rkt  pset10.rkt  pset3.bak  pset3.rkt  pset4.bak  pset8.bak  pset8.rkt  pset9.bak  pset9.rkt
ComputerScience/CSE 2050/ADT Templates/: Deque.py  DoublyLinkedList.pptx  LL_add_first.py  LL_remove_first.py  Queue.py  Stack.py  hashed_mapping.py
ComputerScience/CSE 2102/Group Projects/: .~lock.GroupAssignments.xlsx#  GroupAssignments.xlsx
ComputerScience/CSE 2102/OR/: .~lock.lecture17-OR.doc#  lecture17-OR.doc
ComputerScience/CSE 2102/Syllabus/: .~lock.lecture1-schedule-logistics-v2.ppt#  lecture1-schedule-logistics-v2.ppt
ComputerScience/CSE 3100/Problem Sets/ps3/PS 3 Starter Code/: CMakeLists.txt  LStack.c  VStack.c  list.c  listTest.c  mimirlist.c  queue.c  vector.c
ComputerScience/CSE 3100/Problem Sets/ps3/PS 3 Starter Code/__MACOSX/: ._VStackTest.c
ComputerScience/CSE 3666/Lecture Slides/: division_demo.pptx  mult_demo1.pptx  pipeline.pptx  pipeline_forwarding.pptx
ComputerScience/Linear Algebra/Projects/: MATH2210 PROJECT.docx  (+1 more)
(+467 files in other folders)
